--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_margin.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_margin.scss
@@ -13,12 +13,21 @@
     }
 }
 
-.m-b--full {
-    margin-bottom: vr-space(1);
+.m-b {
+    &--full {
+        margin-bottom: vr-space(1);
+    }
+
+    &--none {
+        margin-bottom: 0;
+    }
 }
 
-.m-b--none {
-    margin-bottom: 0;
+.m-br {
+    &--quarter {
+        margin-bottom: vr-space(.25);
+        margin-right: vr-space(.25);
+    }
 }
 
 .m-t--full {
