--- a/src/IAmBacon/IAmBacon/Views/Post/Category.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Category.cshtml
@@ -3,17 +3,16 @@
 {
     @Styles.Render("~/bundles/categoryCss")
 }
-@section iecss
-{
-    @Styles.Render("~/bundles/categoryIeCss")
-}
 <div class="pageTitle">
     <div class="layoutContainer layoutContainer--visible has-triangle">
         <h1 class="pageTitle-headline pageTitle-headline--sm">Recent posts for category '@Model.Title'</h1>
     </div>
 </div>
-<div class="layoutContainer content">
-    @Html.DisplayFor(x => x.Posts)
+<div class="layoutContainer">
+    <section class="pageSection co m-t--full">
+        <h2 class="visuallyHidden">Articles</h2>
+        @Html.DisplayFor(x => x.Posts)
+    </section>
     @if (Model.DisplayPagination)
     {
         @Html.Partial("_Pagination", Model.Pagination)
