--- a/src/IAmBacon/IAmBacon/Views/Post/Landing.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Landing.cshtml
@@ -14,10 +14,10 @@
     </div>
 </div>
 <div class="layoutContainer">
-    <div class="g-landing-content">
+    <section class="g-landing-content">
         <h2 class="h2">Recent posts</h2>
         @Html.DisplayFor(x => x.Posts)
-    </div>
+    </section>
     <div class="g-landing-aside">
         <aside class="asideNav">
             <h2 class="asideNav-title">Categories</h2>
