--- a/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.ViewModels.Home.PostThumbViewModel
+﻿@model IAmBacon.ViewModels.Shared.PostThumbViewModel
 <div class="g-article article">
     <a href="@Url.Post(@Model.SeoTitle)">
         <img class="article-image" src="@Model.Thumbnail" alt="@Model.Title" />
@@ -7,9 +7,26 @@
         <a href="@Url.Post(@Model.SeoTitle)">@Model.Title</a>
     </h3>
     <dl class="article-meta">
-        <dt class="visuallyHidden">Category:</dt>
-        <dd>
-            <a class="categoryTag" href="@Url.Category(@Model.Category.ToSeoUrl())">@Model.Category</a>
-        </dd>
+        @if (Model.DisplayCategory)
+        {
+            <dt class="visuallyHidden">Category:</dt>
+            <dd>
+                <a class="tag tag--category" href="@Url.Category(@Model.Category.ToSeoUrl())">@Model.Category</a>
+            </dd>
+        }
+        @if (Model.DisplayTags)
+        {
+            <dt class="visuallyHidden">Tags:</dt>
+            <dd>
+                <ul>
+                    @for (int i = 0; i < Model.Tags.Count(); i++)
+                    {
+                        <li class="inlineBlock m-br--quarter">
+                            @Html.DisplayFor(x => x.Tags.ToList()[i], "PostThumbTag")
+                        </li>
+                    }
+                </ul>
+            </dd>
+        }
     </dl>
 </div>
