Add thumbnail styles to landing page

--- a/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
@@ -19,6 +19,8 @@
     "../../components/aside-nav",
     "../../components/meter",
     "../../components/buttons",
+    "../../components/tag",
+    "../../components/article",
     "../../components/pagination",
     "../../components/page-title";
 
