Change Post title font size and alignment

--- a/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
@@ -10,7 +10,7 @@
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
         <div class="pageTitle">
-            <h1 class="layoutContainer layoutContainer--visible has-triangle pageTitle-headline pageTitle-headline--sm pageTitle-headline--post" itemprop="name headline">@Model.Title</h1>
+            <h1 class="layoutContainer layoutContainer--visible has-triangle pageTitle-headline pageTitle-headline--sm h2" itemprop="name headline">@Model.Title</h1>
         </div>
         <div class="layoutContainer">
             <ul class="articleLayoutContainer metaData listInline">
