Add description text to thumbnails on blog landing page

--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_typography.scss
@@ -28,3 +28,16 @@
     font-weight: 700;
     @include vr-line-height($h3-font-size, 1.5);
 }
+
+// Article content style
+@mixin article-content() {
+    @include respond-to(small-up) {
+        @include vr-line-height($factor: 1.2);
+        @include font-size($article-base-font-size);
+    }
+
+    @include respond-to(extra-small) {
+        @include vr-line-height($factor: 1);
+        @include font-size($article-base-font-size-small);
+    }
+}
