--- a/src/IAmBacon/IAmBacon/Content/sass/components/_article.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/components/_article.scss
@@ -55,4 +55,13 @@
     &-image {
         border-radius: 3px;
     }
+
+    > p {
+        @include article-content;
+
+        margin: {
+            top: 1em;
+            bottom: 1em;
+        }
+    }
 }
