--- a/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
@@ -9,9 +9,6 @@ $base-font-size: 16px;
 // The base line height determines the basic unit of vertical rhythm.
 $base-line-height: 24px;
 
-// Proportion by which font-size values scale up.  
-$scale: 1.5;
-
 // The default font family.
 $base-font-family: 'Lato', sans-serif !default;
 
@@ -24,7 +21,8 @@ $h5-font-size: 0.87 * $base-font-size !default; //14px
 $h6-font-size: 0.69 * $base-font-size !default; //11px
 
 // Post article font size
-$article-base-font-size:    $base-font-size * 1.125; //18px
+$article-base-font-size:        $base-font-size * 1.125; //18px
+$article-base-font-size-small:  $base-font-size * 1;     //16px
 
 // The amount lists and blockquotes are indented.
 $indent-amount: 40px !default;
