Add styling for lists in a post

--- a/src/IAmBacon/IAmBacon/Content/sass/pages/post/post.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/post/post.scss
@@ -85,6 +85,26 @@ article {
             padding: 5px;
         }
     }
+        
+    ul {
+        margin-left: 25px;
+
+        li {
+            position: relative;
+
+            &:before {
+                content: "";
+                position: absolute;                
+                top: 50%;
+                right: 100%;
+                width: 6px;
+                height: 6px;
+                border-radius: 50%;
+                background-color: $cursive;                
+                margin-right: 13px;                
+            }
+        }
+    }
 }
 
 .image-center {
