Styling improvements: - Remove home link from header - Move article styling to component scss file - Change link colour in articles

--- a/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
@@ -32,6 +32,9 @@
  $have-a-go:	#687E87;
  $examined:		#5E7078;
 
+ // Misc
+ $article-link: #38A7BB;
+
 
 // Global colours.
 // Globally used colour variables.
