--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Edit.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Edit.cshtml
@@ -10,6 +10,8 @@
         <span asp-validation-for="Name"></span>
         <label asp-for="Active">Active</label>
         <input asp-for="Active" type="checkbox"/>
+        <label asp-for="Deleted">Delete</label>
+        <input asp-for="Deleted" type="checkbox"/>
     </fieldset>
     <p>
         <input type="submit" value="Save" />
