Move category viewmodels into folder

--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Create.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.Admin.ViewModels.CreateCategoryViewModel
+﻿@model IAmBacon.Admin.ViewModels.Category.CreateCategoryViewModel
 
 <h1>Create a category</h1>
 <form asp-controller="Category" asp-action="Create" method="post">
