--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Delete.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.Admin.ViewModels.DeleteCategoryViewModel
+﻿@model IAmBacon.Admin.ViewModels.Category.DeleteCategoryViewModel
 
 <h1>Delete a category</h1>
 <p>
