--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Details.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.Admin.ViewModels.RetrieveCategoryViewModel
+﻿@model IAmBacon.Admin.ViewModels.Category.RetrieveCategoryViewModel
 
 <h1>Category details</h1>
 <fieldset>
