--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Edit.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.Admin.ViewModels.EditCategoryViewModel
+﻿@model IAmBacon.Admin.ViewModels.Category.EditCategoryViewModel
 
 <h1>Edit a category</h1>
 <form asp-controller="Category" asp-action="Edit" method="post">
