--- a/src/IAmBacon/IAmBacon.Admin/Views/Category/Delete.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Category/Delete.cshtml
@@ -4,13 +4,14 @@
 <p>
     <strong>Are you sure you want to delete this?</strong>
 </p>
-<fieldset>
-    <legend>Category</legend>
-    <label asp-for="Name">Name</label>
-    <input asp-for="Name" type="text" readonly="readonly" />
-    <label asp-for="DateModified">Date Modified</label>
-    <input asp-for="DateModified" type="text" readonly="readonly"/>
-    <label asp-for="DateCreated">Date Created</label>
-    <input asp-for="DateCreated" type="text" readonly="readonly"/>
-</fieldset>
+<form asp-controller="Category" asp-action="Delete" method="post">
+    <fieldset>
+        <legend>Category</legend>
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" type="text" readonly="readonly" />
+    </fieldset>
+    <p>
+        <input type="submit" value="Delete" />
+    </p>
+</form>
 <a asp-controller="Category" asp-action="Index">Back to list</a>
