--- a/src/IAmBacon/IAmBacon.Admin/Views/Post/Create.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/Post/Create.cshtml
@@ -22,11 +22,14 @@
             <label asp-for="Tags"></label>
         </div>
         <div>
-            @foreach (var tag in Model.Tags)
-            {
-                <input asp-for="@tag.Id" type="hidden" />
-                <label asp-for="@tag.Label">@tag.Label</label>
-                <input asp-for="@tag.IsChecked" type="checkbox" />
+            @{
+                for (int i = 0; i < Model.Tags.Count; i++)
+                {
+                    <input asp-for="@Model.Tags[i].Id" type="hidden" />
+                    <input asp-for="@Model.Tags[i].Label" type="hidden" />
+                    <label asp-for="@Model.Tags[i].Id">@Model.Tags[i].Label</label>
+                    <input asp-for="@Model.Tags[i].IsChecked" type="checkbox" />
+                }
             }
         </div>
         <div>
