Add post details page

--- a/src/IAmBacon/IAmBacon.Admin/Views/User/Details.cshtml
+++ b/src/IAmBacon/IAmBacon.Admin/Views/User/Details.cshtml
@@ -4,13 +4,13 @@
 <fieldset>
     <legend>User</legend>
     <div>
-        <label asp-for="FirstName">FirstName</label>
+        <label asp-for="FirstName">First name</label>
     </div>
     <div>
         <input asp-for="FirstName" type="text" readonly="readonly" />
     </div>
     <div>
-        <label asp-for="LastName">LastName</label>
+        <label asp-for="LastName">Last name</label>
     </div>
     <div>
         <input asp-for="LastName" type="text" readonly="readonly" />
@@ -28,7 +28,7 @@
         <input asp-for="Bio" type="text" readonly="readonly" />
     </div>
     <div>
-        <label asp-for="ProfileImage">ProfileImage</label>
+        <label asp-for="ProfileImage">Profile image</label>
     </div>
     <div>
         <input asp-for="ProfileImage" type="text" readonly="readonly" />
