--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 ﻿//
-// Site styles
-// --------------------------------------------------
+//  IAMBACON STYLES
+//  CSS for iambacon website.
+// -----------------------------------------------------------------------------
 
 // Base
 // ------------------------
