docs(page): add pagination
Add content to pagination page

--- a/docs/_includes/layout.html
+++ b/docs/_includes/layout.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - I am Bacon styleguide</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styleguide.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/styleguide.css">
+    <link rel="stylesheet" href="/assets/css/prism.css">
 </head>
 
 <body>
