--- a/src/sass/components/_tag.scss
+++ b/src/sass/components/_tag.scss
@@ -3,7 +3,7 @@
 // Component representing an article category label or tag.
 // --------------------------------------------------
 /// <reference path="../base/_variables.scss" />
-.tag {
+.c-tag {
     background-color: $very-light-grey;
     color: $ill-stay-here;
     border-radius: 2px;
