--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -1,10 +1,7 @@
 ﻿//
 // Article component.
-// Component representing an article.
-// Contains a header, metadata and an image.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/article
+// -----------------------------------------------------------------------------
 
 .article {
     border-radius: 3px;
